--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/angular": "^1.0.3",
     "@capacitor/core": "latest",
     "@ionic/angular": "^5.5.2",
+    "@mdi/angular-material": "^5.9.55",
     "ion2-calendar": "^3.0.0-rc.0",
     "ionic2-calendar": "^0.6.7",
     "moment": "^2.29.1",
