--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdi/angular-material": "^5.9.55",
     "ion2-calendar": "^3.0.0-rc.0",
     "ionic2-calendar": "^0.6.7",
+    "material-icons": "^0.7.0",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
